# Tractament-de-Dades-Textuals-i-Codificades

./: .gitignore  README.md  TDTC_0.ipynb  TDTC_0_python.ipynb  TDTC_1.ipynb  TDTC_1_comprehensions.ipynb  TDTC_2.ipynb  TDTC_2_NLTK.ipynb  TDTC_3.ipynb  TDTC_3_PoS.ipynb  TDTC_4.ipynb  TDTC_4_spacy.ipynb  TDTC_5.ipynb  TDTC_6.ipynb  TDTC_6_solucions.ipynb  TDTC_7_embeddings.ipynb  TDTC_8_embeddings2.ipynb  TDTC_9_setfit.ipynb  pyproject.toml
data/: CLASSIFICACIÓ_NOTES_CLINIQUES.csv
solucions/: TDTC_6_solucions.ipynb
