[project]
name = "curs-clinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "ipython==7.23.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "jupyterlab-code-formatter==2.2.1",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.8",
    "nb-clean>=4.0.1",
    "nibabel>=5.3.3",
    "nltk>=3.9.2",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pip>=25.3",
    "plotly>=6.7.0",
    "protobuf>=7.34.1",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "scispacy>=0.2.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.7.4,<3.8",
    "tiktoken>=0.12.0",
    "transformers[torch]>=4.41,<5.0",
    "torch>=2.6,<2.11",
    "setfit>=1.1.3",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
